--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,5 @@
-- src: https://github.com/ITMO-IS-devops-2025/docker
+- name: docker
+  src: https://github.com/ITMO-IS-devops-2025/ansible-role-docker
 
 - name: nginx
   src: https://github.com/ITMO-IS-devops-2025/ansible-role-nginx
